<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Knock Off!</string>
    <string name="hello_world">Knock Off</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Knock Off!!</string>
    <string name="capital_on">ON</string>
    <string name="capital_off">OFF</string>

    <color name="dont_color">#CDB</color>

    <string name="running">App Not Running.</string>

    <color name="white">#FFF</color>

    <string name="exit">Exit</string>
    <string name="block_list">Block List</string>
    <string name="title_activity_lists">Lists</string>
    <string name="action_settings">Settings</string>
    <string name="add_list">Add To List</string>
    <string name="delete_list">Delete From List</string>
    <string name="show_list">Show List</string>
    <string name="title_activity_show_list">ShowList</string>
    <string name="title_activity_add_list">AddList</string>
    <string name="title_activity_delete_list">DeleteList</string>
    
    <string name="listNumber">Phone No.:</string>
    <string name="listName">Name:</string>
    <string name="listValue">Block Level:</string>
    <string name="Add">Add</string>
    

</resources>