<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back" >

    <ToggleButton
        android:id="@+id/toggleButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:minHeight="100dp"
        android:minWidth="150dp"
        android:textOff="@string/capital_off"
        android:textOn="@string/capital_on"
        android:textSize="@dimen/dont" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/hello_world"
        android:textColor="@color/dont_color"
        android:textSize="@dimen/dont" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignParentRight="true"
        android:layout_marginRight="26dp"
        android:minHeight="70dp"
        android:minWidth="110dp"
        android:text="@string/exit" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="28dp"
        android:layout_marginLeft="20dp"
        android:minHeight="70dp"
        android:minWidth="110dp"
        android:text="@string/block_list" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toggleButton1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="@string/running"
        android:textColor="@color/white"
        android:textSize="@dimen/dont" />

</RelativeLayout>